# k-boot

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
initramfs/: setup
kbootd/: .clang-format  meson.build  meson.cross
kbootd/src/: android.h  boot.c  boot.h  fastboot.c  fastboot.h  fb_command.c  fb_command.h  gpt.h  main.c  part.c  part.h  sparse.h  utils.c  utils.h
